Updated UI to connect to flask server

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <div id="response-div"></div>
+    <h1>List of Courses</h1>
+    <div><ul id="courses"></ul></div>
   </body>
 </html>
